--- a/css/styles.css
+++ b/css/styles.css
@@ -1293,7 +1293,7 @@ button:disabled.btn {
 
 .beach-card img {
     width: 100%;
-    height: 240px;
+    height: clamp(180px, 24vw, 240px);
     object-fit: cover;
     transition: transform var(--transition-slow), filter var(--transition-base);
 }
@@ -1417,7 +1417,7 @@ button:disabled.btn {
 
 .dish-card img, .accommodation-card img, .tourism-card img {
     width: 100%;
-    height: 240px;
+    height: clamp(180px, 24vw, 240px);
     object-fit: cover;
     display: block;
     transition: transform var(--transition-slow), filter var(--transition-base);
@@ -1493,7 +1493,7 @@ button:disabled.btn {
 
 .restaurant-card img {
     width: 100%;
-    height: 240px;
+    height: clamp(180px, 24vw, 240px);
     object-fit: cover;
     display: block;
     transition: transform var(--transition-slow), filter var(--transition-base);
